# geemap-ws24

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  poetry.toml  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: pdsi_stats.csv  spi_stats.csv
