[tool.poetry]
name = "geemap-ws24"
version = "0.1.0"
description = "A template for geemap"
authors = ["Amjad Raza <info@datafyassociates.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]
[tool.poetry.dependencies]
python = ">=3.10 <3.12"
jupyterlab = "^4.2.3"
geemap = "^0.33.1"
ffmpeg = "^1.4"

[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = {version = "^23.1a1", allow-prereleases = true}
flake8 = "^6.0.0"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"